<resources>
    <string name="app_name">InternshipProject</string>
    <string name="signup">SIGN UP</string>
    <string name="signIn">SIGN IN</string>
    <string name="name">Name</string>
    <string name="pass">Password</string>
    <string name="email">Email</string>
    <string name="phone">Phone No</string>
    <string name="dob">Date of Birth</string>
    <string name="username">Enter name</string>
    <string name="EnterEmail">Enter email</string>
    <string name="EnterPass">Enter password</string>
    <string name="EnterPhone">Enter phone no</string>
    <string name="EnterWeight">Enter weight</string>
    <string name="EnterHeight">Enter height</string>
    <string name="enterDob">Select dob</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="SignInBtn">Sign In</string>
    <string name="LogoutBtn">log Out</string>
    <string name="nameTag">Name</string>
    <string name="passTag">Password</string>
    <string name="emailTag">Email</string>
    <string name="phoneTag">Phone No</string>
    <string name="checkName">Name is Empty</string>
    <string name="checkPass">Password is Empty</string>
    <string name="checkEmail">Email is Empty</string>
    <string name="checkPhone">Phone no is Empty</string>
    <string name="checkDOB">DOB is Empty</string>
    <string name="validName">Name is not Valid</string>
    <string name="validPass">Password is not Valid</string>
    <string name="validEmail">Email is not Valid</string>
    <string name="validPhone">Phone no is not Valid</string>
    <string name="validDOB">DOB is not Valid</string>
    <string name="checkLogin">isLogged</string>
    <string name="Profile">Profile</string>
    <string name="userList">List of Users</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="enterField">Some fields are Empty</string>
    <string name="accountLine">Already have an account?</string>
    <string name="userExists">User Already Exists</string>
    <string name="addProperty">Add Property</string>
    <string name="selectArea">Select Area</string>
    <string name="FurnishTag">Furnished</string>
    <string name="NonFurnishTag">Non Furnished</string>
    <string name="SaleTag">Sale</string>
    <string name="RentTag">Rent</string>
    <string name="emptyCity">City is Empty</string>
    <string name="emptyAddress">Address is Empty</string>
    <string name="emptyRoom">Room Field is Empty</string>
    <string name="emptyBath">Bath Field is Empty</string>
    <string name="emptyKitchen">Kitchen Field is Empty</string>
    <string name="emptyFloor">Floor Field is Empty</string>
    <string name="idTag">id</string>
    <string name="cityTag">city</string>
    <string name="addressTag">address</string>
    <string name="areaTag">area</string>
    <string name="roomTag">room</string>
    <string name="floorTag">floor</string>
    <string name="kitchenTag">kitchen</string>
    <string name="bathTag">bath</string>
    <string name="interiorTag">interior</string>
    <string name="purposeTag">purpose</string>
    <string name="errorEmail">Email not exists</string>
    <string name="errorPassword">Password not correct</string>
    <string name="existsEmail">Email already exists</string>
    <string name="existsPhone">Phone no already exists</string>



    <string-array name="areaSpinner">
        <item>3 Marla</item>
        <item>5 Marla</item>
        <item>7 Marla</item>
        <item>10 Marla</item>
        <item>1 Kanal</item>
    </string-array>

</resources>