<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <LinearLayout
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:id="@+id/layoutProfile"
        android:layout_marginLeft="60dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/ivPerson"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_person_24" />
        <TextView
            android:id="@+id/tvProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/Profile"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/layoutList"
        android:layout_below="@id/layoutProfile"
        android:layout_marginLeft="60dp"
        android:clickable="true"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/ivList"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_format_list_bulleted_24" />
        <TextView
            android:id="@+id/tvList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/userList"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>
    </LinearLayout>


    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="90dp"
        android:backgroundTint="@color/brownOrange_2"
        android:text="@string/LogoutBtn" />

</RelativeLayout>