<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="45dp"
        android:id="@+id/l1">
        <TextView
            android:id="@+id/tvNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginLeft="30dp"
            android:textSize="20sp"
            android:textColor="@color/brownOrange_2"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="To be Filled"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/l1"
        android:layout_marginTop="20dp"
        android:id="@+id/l2">
        <TextView
            android:id="@+id/tvEmailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginLeft="30dp"
            android:textSize="20sp"
            android:textColor="@color/brownOrange_2"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="To be Filled"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/l2"
        android:layout_marginTop="20dp"
        android:id="@+id/l3">
        <TextView
            android:id="@+id/tvPhoneTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_marginLeft="30dp"
            android:textSize="20sp"
            android:textColor="@color/brownOrange_2"/>

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="To be Filled"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l3"
        android:text="________________________"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="45dp"
        android:textSize="25sp"
        android:textColor="@color/brownOrange"/>
    <TextView
        android:id="@+id/tvAgeCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLine"
        android:text="Calculate Age"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="45dp"
        android:textSize="25sp"
        android:textColor="@color/brownOrange"/>

    <TextView
        android:id="@+id/tvDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAgeCalculator"
        android:text="@string/dob"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="45dp"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etDOB"
        android:layout_width="280dp"
        android:layout_height="49dp"
        android:layout_below="@id/tvDOB"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/enterDob"
        android:inputType="numberDecimal" />
    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDOB"
        android:text="Your Age is: "
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"/>

</RelativeLayout>